[gd_scene load_steps=4 format=3 uid="uid://bd35xg8x32g03"]

[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="1_12418"]
[ext_resource type="Script" path="res://Scripts/GameScripts/Android/VirtualController.gd" id="1_lmm2a"]
[ext_resource type="Texture2D" uid="uid://bkvmydfn5saxg" path="res://addons/virtual_joystick/textures/joystick_tip.png" id="3_q7iiv"]

[node name="VirtualController" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lmm2a")

[node name="VirtualMovementJoystick" parent="." instance=ExtResource("1_12418")]
layout_mode = 1

[node name="VirtualAbilityJoystick" parent="." instance=ExtResource("1_12418")]
layout_mode = 1
offset_left = 1461.0
offset_top = -538.0
offset_right = 1761.0
offset_bottom = -238.0

[node name="Jump" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1159.0
offset_top = -160.0
offset_right = 1259.0
offset_bottom = -60.0
texture = ExtResource("3_q7iiv")

[node name="Attack" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1390.0
offset_top = -257.0
offset_right = 1490.0
offset_bottom = -157.0
texture = ExtResource("3_q7iiv")

[connection signal="gui_input" from="Jump" to="." method="_on_jump_gui_input"]
[connection signal="gui_input" from="Attack" to="." method="_on_attack_gui_input"]
